fixed overflow scale bug

--- a/src/Components/7-ContactMeSection/ContactMeSection.scss
+++ b/src/Components/7-ContactMeSection/ContactMeSection.scss
@@ -73,7 +73,6 @@
 
             .ContactOption {
                 padding-bottom: 0;
-                scale: 1.5;
 
                 &:nth-last-child(1) {
                     padding-bottom: 0px;
