--- a/src/Components/7-ContactMeSection/ContactOption/ContactOption.scss
+++ b/src/Components/7-ContactMeSection/ContactOption/ContactOption.scss
@@ -5,7 +5,7 @@
     font-size: .6rem;
     display: flex;
     width: fit-content;
-    width: 365px;
+    max-width: 365px;
     text-decoration: none;
 
     .image-container {
